# RS-app

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
data/: gschemas.compiled
data/resources/: resources.gresource.xml  window.ui
data/resources/ui/: window.ui
data/schemas/: org.gtk_rs.Todo8.gschema.xml
src/: main.rs
src/custom_button/: imp.rs  mod.rs
src/custom_window/: mod.rs
src/window/: imp.rs
